[gd_scene load_steps=3 format=3 uid="uid://bq2d1vi1y5e02"]

[ext_resource type="Texture2D" uid="uid://b1e5vg005ylm1" path="res://sprite/Custom/Border All 9.png" id="1_fa0op"]
[ext_resource type="Script" uid="uid://cjk1at5ewwt4n" path="res://UI/inv_slot_ui.gd" id="1_isgot"]

[node name="InvSlotUI" type="Panel"]
custom_minimum_size = Vector2(120, 120)
offset_right = 120.0
offset_bottom = 120.0
script = ExtResource("1_isgot")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(59.5617, 59.5042)
scale = Vector2(1.91736, 1.91922)
texture = ExtResource("1_fa0op")
region_enabled = true
region_rect = Rect2(383.979, 256.848, 62.6053, 62.9474)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 119.0
offset_bottom = 119.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 119.0
offset_bottom = 119.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
